--- a/index.html
+++ b/index.html
@@ -1,7 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to My Projects</title>
+    <style>
+        body {
+            background-color: #333; /* Dark gray background */
+            color: #fff; /* White text color */
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        h1 {
+            font-size: 2.5rem;
+            margin-bottom: 20px;
+        }
+        p {
+            font-size: 1.2rem;
+            line-height: 1.6;
+        }
+    </style>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages!!</p>
+    <h1>Welcome to My Projects</h1>
+    <p>Explore my latest creations, experiments, and innovations. Whether it's code, art, or ideas, you'll find it here.</p>
+    <p>Feel free to browse, learn, and get inspired!</p>
 </body>
 </html>
