--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <h1>Welcome to My Projects</h1>
     <p>Explore my latest creations, experiments, and innovations. Whether it's code, art, or ideas, you'll find it here.</p>
     <p>Feel free to browse, learn, and get inspired!</p>
+    <p><a href="https://github.com/Freakthis">My github work</a></p>
 </body>
 </html>
